manifests/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "python-flask-boilerplate-namespace"
