manifests/06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: python-flask-boilerplate-namespace
  name: python-flask-boilerplate-web-app
spec:
  selector:
    matchLabels:
      app: python-flask-boilerplate-web-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: python-flask-boilerplate-web-app
    spec:
      containers:
        - name: python-flask-boilerplate-web-app
          image: index.docker.io/$DOCKERHUB_USERNAME/$PROJECT_NAME:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          command: ["gunicorn"]
          args:
            - --log-level
            - "debug"
            - --timeout
            - "300"
            - -b
            - :5000
            - app:app
          livenessProbe:
            httpGet:
              path: /info
              port: 5000
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 30
          startupProbe:
            httpGet:
              path: /info
              port: 5000
            failureThreshold: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
# use envsubst to replace with actual values:
# $ export $(cat .env | xargs) && envsubst < manifests/06_deployment.yaml | kubectl apply -f -
